--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ loom {
 			sourceSet sourceSets.client
 		}
 	}
+
+	runs {
+		client {
+			vmArg "-Dlogistics.timing=true"
+		}
+	}
 }
 
 repositories {
