--- a/gradle.properties
+++ b/gradle.properties
@@ -20,6 +20,6 @@ loader_version=0.16.7
 fabric_api_version=0.102.0+1.21
 
 # Mod
-mod_version=0.1.0-alpha
+mod_version=dev-local
 maven_group=com.logistics
 archives_base_name=logistics
