ci: setup automatic publishing workflow (#19)

--- a/.github/workflows/build-jar.yml
+++ b/.github/workflows/build-jar.yml
@@ -6,6 +6,22 @@ on:
     types: [opened, synchronize, reopened, ready_for_review]
   release:
     types: [published]
+  workflow_dispatch:
+    inputs:
+      build_type:
+        description: "Override build type (pr/dev/release)"
+        required: true
+        default: "dev"
+        type: choice
+        options:
+          - pr
+          - dev
+          - release
+      publish:
+        description: "Actually publish (otherwise build only)"
+        required: true
+        default: false
+        type: boolean
 
 permissions:
   contents: write  # needed for release uploads; harmless for PRs
@@ -29,7 +45,9 @@ jobs:
         id: build_type
         shell: bash
         run: |
-          if [[ "${{ github.event_name }}" == "release" ]]; then
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            TYPE="${{ inputs.build_type }}"
+          elif [[ "${{ github.event_name }}" == "release" ]]; then
             TYPE="release"
           elif [[ "${{ github.actor }}" == "release-please[bot]" || "${{ github.head_ref }}" == release-please--* ]]; then
             TYPE="dev"
@@ -83,65 +101,38 @@ jobs:
         with:
           name: logistics-${{ steps.version.outputs.mod_version }}
           path: |
-            build/libs/*.jar
-            !build/libs/*-sources.jar
-            !build/libs/*-javadoc.jar
-            !build/libs/*-dev.jar
+            build/libs/!(*-@(dev|sources|javadoc)).jar
 
-      - name: Upload Release assets
-        if: ${{ steps.build_type.outputs.type == 'release' }}
-        uses: softprops/action-gh-release@v2
+      - name: Publish (dev)
+        if: ${{ steps.build_type.outputs.type == 'dev' && (github.event_name != 'workflow_dispatch' || inputs.publish) }}
+        uses: Kir-Antipov/mc-publish@v3.3
         with:
+          version: ${{ steps.version.outputs.mod_version }}
+          version-type: beta
+          changelog: "Automated dev build from commit ${{ github.sha }}"
+
           files: |
-            build/libs/*.jar
-            !build/libs/*-sources.jar
-            !build/libs/*-javadoc.jar
-            !build/libs/*-dev.jar
+            build/libs/!(*-@(dev|sources|javadoc)).jar
 
-      # Uncomment when we're ready to publish dev builds to mod platforms
-      # - name: Publish (dev)
-      #   if: ${{ steps.build_type.outputs.type == 'dev' }}
-      #   uses: Kir-Antipov/mc-publish@v3
-      #   with:
-      #     version: ${{ steps.version.outputs.mod_version }}
-      #     version-type: beta
-      #     changelog: "Automated dev build from commit ${{ github.sha }}"
-      #
-      #     files: |
-      #       build/libs/*.jar
-      #       !build/libs/*-sources.jar
-      #       !build/libs/*-javadoc.jar
-      #       !build/libs/*-dev.jar
-      #
-      #     modrinth-id: logistics
-      #     modrinth-featured: false
-      #     modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-      #
-      #     # curseforge-id: 1425041
-      #     # curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
-      #
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+          modrinth-featured: false
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
 
-      # Uncomment when we're ready to publish to mod platforms
-      # - name: Publish (release)
-      #   if: ${{ steps.build_type.outputs.type == 'release' }}
-      #   uses: Kir-Antipov/mc-publish@v3
-      #   with:
-      #     version: ${{ steps.version.outputs.mod_version }}
-      #     version-type: release
-      #     changelog: ${{ github.event.release.body }}
-      #
-      #     files: |
-      #       build/libs/*.jar
-      #       !build/libs/*-sources.jar
-      #       !build/libs/*-javadoc.jar
-      #       !build/libs/*-dev.jar
-      #
-      #     modrinth-id: logistics
-      #     modrinth-featured: true
-      #     modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
-      #
-      #     curseforge-id: 1425041
-      #     curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
-      #
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
+          fail-mode: warn
+          retry-attempts: 2
+          retry-delay: 10000
+
+      - name: Publish (release)
+        if: ${{ steps.build_type.outputs.type == 'release' && (github.event_name != 'workflow_dispatch' || inputs.publish) }}
+        uses: Kir-Antipov/mc-publish@v3.3
+        with:
+          version: ${{ github.event_name == 'release' && github.event.release.tag_name || steps.version.outputs.mod_version }}
+          version-type: release
+          changelog: ${{ github.event_name == 'release' && github.event.release.body || format('Manual {0} publish from {1}', steps.build_type.outputs.type, github.sha) }}
+
+          files: |
+            build/libs/!(*-@(dev|sources|javadoc)).jar
+
+          modrinth-featured: true
+          modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
+          curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
