--- a/.github/workflows/build-jar.yml
+++ b/.github/workflows/build-jar.yml
@@ -7,6 +7,8 @@ on:
   release:
     types: [published]
   workflow_dispatch:
+    # Manual workflow_dispatch exists only to allow safe testing of publishing changes.
+    # Normal publishing is driven by release-please PRs and GitHub Releases.
     inputs:
       build_type:
         description: "Override build type (pr/dev/release)"
@@ -95,18 +97,11 @@ jobs:
         env:
           MOD_VERSION: ${{ steps.version.outputs.mod_version }}
 
-      - name: Upload PR artifact
-        if: ${{ steps.build_type.outputs.type != 'release' }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: logistics-${{ steps.version.outputs.mod_version }}
-          path: |
-            build/libs/!(*-@(dev|sources|javadoc)).jar
-
       - name: Publish (dev)
         if: ${{ steps.build_type.outputs.type == 'dev' && (github.event_name != 'workflow_dispatch' || inputs.publish) }}
         uses: Kir-Antipov/mc-publish@v3.3
         with:
+          name: "Logistics: Automation v${{ steps.version.outputs.mod_version }}"
           version: ${{ steps.version.outputs.mod_version }}
           version-type: beta
           changelog: "Automated dev build from commit ${{ github.sha }}"
@@ -125,6 +120,7 @@ jobs:
         if: ${{ steps.build_type.outputs.type == 'release' && (github.event_name != 'workflow_dispatch' || inputs.publish) }}
         uses: Kir-Antipov/mc-publish@v3.3
         with:
+          name: "Logistics: Automation v${{ steps.version.outputs.mod_version }}"
           version: ${{ github.event_name == 'release' && github.event.release.tag_name || steps.version.outputs.mod_version }}
           version-type: release
           changelog: ${{ github.event_name == 'release' && github.event.release.body || format('Manual {0} publish from {1}', steps.build_type.outputs.type, github.sha) }}
