--- a/.github/workflows/check-lint.yml
+++ b/.github/workflows/check-lint.yml
@@ -22,8 +22,5 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
 
-      - name: Check formatting (Spotless)
-        run: ./gradlew spotlessCheck --no-daemon
-
-      - name: Check style (Checkstyle)
-        run: ./gradlew checkstyleMain checkstyleClient --no-daemon
+      - name: Check formatting
+        run: ./gradlew check --no-daemon
