--- a/.github/workflows/build-jar.yml
+++ b/.github/workflows/build-jar.yml
@@ -119,7 +119,7 @@ jobs:
           echo "🎮 Minecraft: $MC_VERSION"
 
       - name: Build
-        run: ./gradlew clean jar --no-daemon
+        run: ./gradlew jar --no-daemon
         env:
           MOD_VERSION: ${{ steps.version.outputs.mod_version }}
 
