--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,7 @@
 # Gradle
 org.gradle.jvmargs=-Xmx2G
 org.gradle.parallel=true
+org.gradle.caching=true
 
 # Note: This project requires Java 21
 # If you get "Unsupported class file major version" errors, you need to configure
