--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -50,5 +50,5 @@ jobs:
       - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
-          name: logistics-${{ steps.version.outputs.mod_version }}
-          path: build/libs/logistics-${{ steps.version.outputs.mod_version }}.jar
+          name: logistics-pr-${{ github.event.pull_request.number }}-${{ github.run_id }}
+          path: build/libs/logistics-*.jar
