Use remapJar instead of jar in GitHub Actions build workflows

--- a/.github/workflows/build-dev.yml
+++ b/.github/workflows/build-dev.yml
@@ -56,7 +56,7 @@ jobs:
           echo "📦 Version: $BUILD_VERSION"
 
       - name: Build
-        run: ./gradlew jar --console=plain
+        run: ./gradlew remapJar --console=plain
         env:
           MOD_VERSION: ${{ steps.version.outputs.mod_version }}
 
