--- a/.github/workflows/build-pr.yml
+++ b/.github/workflows/build-pr.yml
@@ -43,7 +43,7 @@ jobs:
           echo "📦 Version: $BUILD_VERSION"
 
       - name: Build
-        run: ./gradlew jar --console=plain
+        run: ./gradlew remapJar --console=plain
         env:
           MOD_VERSION: ${{ steps.version.outputs.mod_version }}
 
