--- a/.github/workflows/build-snapshot.yml
+++ b/.github/workflows/build-snapshot.yml
@@ -17,8 +17,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v6
-        with:
-          fetch-depth: 0  # Need full history to count commits since last tag
 
       - uses: actions/setup-java@v5
         with:
@@ -38,9 +36,8 @@ jobs:
           MC_VERSION="$(grep '^minecraft_version=' gradle.properties | cut -d'=' -f2)"
           SHA7="$(git rev-parse --short=7 HEAD)"
 
-          # Count commits since last release tag (falls back to counting from root if no tags)
-          LAST_TAG="$(git describe --tags --match 'v*' --abbrev=0 2>/dev/null || git rev-list --max-parents=0 HEAD)"
-          BUILD_NO="$(git rev-list --count "${LAST_TAG}..HEAD")"
+          # Use GitHub run number for snapshot builds (monotonic, survives rebases/force-pushes)
+          BUILD_NO="${GITHUB_RUN_NUMBER}"
 
           # Try to get the next version from an open release-please PR targeting next.
           # Falls back to version.txt if no PR is found.
@@ -71,11 +68,13 @@ jobs:
 
           NEXT_VERSION="$(get_release_please_version next || cat version.txt)"
 
-          # Example: 0.3.1-dev.5+mc.26.1-snapshot-4.sha.1a2b3c4
-          BUILD_VERSION="${NEXT_VERSION}-dev.${BUILD_NO}+mc.${MC_VERSION}.sha.${SHA7}"
+          # Example: 0.3.1-snapshot.1234+mc.26.1-snapshot-4.sha.1a2b3c4
+          BUILD_VERSION="${NEXT_VERSION}-snapshot.${BUILD_NO}+mc.${MC_VERSION}.sha.${SHA7}"
 
           echo "mod_version=$BUILD_VERSION" >> "$GITHUB_OUTPUT"
           echo "minecraft_version=$MC_VERSION" >> "$GITHUB_OUTPUT"
+          echo "next_version=$NEXT_VERSION" >> "$GITHUB_OUTPUT"
+          echo "build_no=$BUILD_NO" >> "$GITHUB_OUTPUT"
           echo "📦 Version: $BUILD_VERSION"
 
       - name: Build
@@ -87,7 +86,7 @@ jobs:
         if: github.event_name != 'workflow_dispatch' || inputs.publish
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          name: "v${{ steps.version.outputs.mod_version }} (MC ${{ steps.version.outputs.minecraft_version }})"
+          name: "Logistics: Automation v${{ steps.version.outputs.next_version }}-snapshot (build ${{ steps.version.outputs.build_no }})"
           version: ${{ steps.version.outputs.mod_version }}
           version-type: alpha
           changelog: "Automated snapshot build for Minecraft ${{ steps.version.outputs.minecraft_version }} from commit ${{ github.sha }}"
