--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -50,24 +50,28 @@ jobs:
           fi
           VERSION="${TAG#v}"
 
-          # Example: 0.3.0+mc.1.21.11
-          BUILD_VERSION="${VERSION}+mc.${MC_VERSION}"
+          # Version for display (short): 0.3.0
+          # Version for filename (full): 0.3.0+mc.1.21.11
+          MOD_VERSION="${VERSION}"
+          FILE_VERSION="${VERSION}+mc.${MC_VERSION}"
 
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
-          echo "mod_version=$BUILD_VERSION" >> "$GITHUB_OUTPUT"
+          echo "version=$VERSION" >> "$GITHUB_OUTPUT"
+          echo "mod_version=$MOD_VERSION" >> "$GITHUB_OUTPUT"
+          echo "file_version=$FILE_VERSION" >> "$GITHUB_OUTPUT"
           echo "minecraft_version=$MC_VERSION" >> "$GITHUB_OUTPUT"
-          echo "📦 Version: $BUILD_VERSION"
+          echo "📦 Version: $MOD_VERSION (file: $FILE_VERSION)"
 
       - name: Build
         run: ./gradlew remapJar --console=plain
         env:
-          MOD_VERSION: ${{ steps.version.outputs.mod_version }}
+          MOD_VERSION: ${{ steps.version.outputs.file_version }}
 
       - name: Publish
         if: github.event_name != 'workflow_dispatch' || inputs.publish
         uses: Kir-Antipov/mc-publish@v3.3
         with:
-          name: "v${{ steps.version.outputs.mod_version }} (MC ${{ steps.version.outputs.minecraft_version }})"
+          name: "Logistics: Automation v${{ steps.version.outputs.version }}"
           version: ${{ steps.version.outputs.mod_version }}
           version-type: release
           changelog: ${{ github.event.release.body || format('Release {0}', steps.version.outputs.mod_version) }}
