feat: bump minecraft to 26.1-snapshot-6

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,12 +1,14 @@
 {
   "packages": {
     ".": {
-      "package-name": "logistics-mc1.21.11",
-      "component": "mc1.21.11",
+      "package-name": "logistics-mc26.1",
+      "component": "mc26.1",
       "release-type": "simple",
       "include-component-in-tag": true,
       "pull-request-title-pattern": "chore: release ${version} for ${component}",
-      "initial-version": "0.3.0",
+      "prerelease": true,
+      "prerelease-type": "beta",
+      "initial-version": "0.3.0-beta.0",
       "bump-minor-pre-major": true,
       "bump-patch-for-minor-pre-major": true
     }
