--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.configuration-cache=false
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.11
+minecraft_version=26.1-snapshot-6
 loader_version=0.18.4
 loom_version=1.15-SNAPSHOT
 
@@ -17,5 +17,5 @@ maven_group=com.logistics
 archives_base_name=logistics
 
 # Dependencies
-fabric_version=0.141.3+1.21.11
-energy_version=4.2.0
+fabric_version=0.143.2+26.1
+energy_version=5.0.0
