--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,21 @@
-# Gradle
-org.gradle.jvmargs=-Xmx2G
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
-org.gradle.caching=true
 
-# Minecraft
+# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
+org.gradle.configuration-cache=false
+
+# Fabric Properties
+# check these on https://fabricmc.net/develop
 minecraft_version=1.21.11
-yarn_mappings=1.21.11+build.3
-
-# Fabric
 loader_version=0.18.4
-fabric_api_version=0.141.1+1.21.11
+loom_version=1.15-SNAPSHOT
 
-# Team Reborn Energy API
-energy_version=4.2.0
-
-# Mod
+# Mod Properties
 mod_version=dev-local
 maven_group=com.logistics
 archives_base_name=logistics
+
+# Dependencies
+fabric_version=0.141.3+1.21.11
+energy_version=4.2.0
