--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -106,7 +106,11 @@ jobs:
             MODRINTH_FEATURED="true"
           fi
 
+          # Create shortened version for Modrinth (32 char limit) by dropping loader suffix
+          MODRINTH_VERSION="${VERSION}+mc${MC_VERSION}"
+
           echo "tag=$TAG" >> "$GITHUB_OUTPUT"
+          echo "modrinth_version=$MODRINTH_VERSION" >> "$GITHUB_OUTPUT"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
           echo "full_version=$FULL_VERSION" >> "$GITHUB_OUTPUT"
           echo "minecraft_version=$MC_VERSION" >> "$GITHUB_OUTPUT"
@@ -121,6 +125,7 @@ jobs:
           echo "📦 Built for MC: $MC_VERSION"
           echo "📦 Loader: $LOADER"
           echo "📦 Full version: $FULL_VERSION (will be passed to Gradle as MOD_VERSION)"
+          echo "📦 Modrinth version: $MODRINTH_VERSION (shortened for 32 char limit)"
           echo "📦 Expected artifact: logistics-$FULL_VERSION.jar"
           echo "🔨 Gradle task: $GRADLE_TASK"
           echo "📦 Version type: $VERSION_TYPE"
@@ -146,6 +151,7 @@ jobs:
           modrinth-id: ${{ vars.MODRINTH_PROJECT_ID }}
           modrinth-token: ${{ secrets.MODRINTH_TOKEN }}
           modrinth-featured: ${{ steps.version.outputs.modrinth_featured }}
+          modrinth-version: ${{ steps.version.outputs.modrinth_version }}
 
           curseforge-id: ${{ vars.CURSEFORGE_PROJECT_ID }}
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
