Use FULL_VERSION when generating shortened Modrinth version in workflow

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -106,9 +106,8 @@ jobs:
             MODRINTH_FEATURED="true"
           fi
 
-          # Create shortened version for Modrinth (32 char limit) by dropping loader suffix
-          MODRINTH_VERSION="${VERSION}+mc${MC_VERSION}"
-          # Explicitly truncate to 32 chars if needed
+          # Create potentially shortened version for Modrinth (32 char limit)
+          MODRINTH_VERSION="${FULL_VERSION}"
           if (( ${#MODRINTH_VERSION} > 32 )); then
             MODRINTH_VERSION="${MODRINTH_VERSION:0:32}"
             echo "⚠️  Modrinth version truncated to 32 chars: $MODRINTH_VERSION"
